--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             </div>
         </div>
     </div>
-    <script src="./js/utility.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/timer.js"></script>
     <script src="js/main.js" type="module"></script>
 </body>
 </html>
